# autopilot-video

./: .envrc  .gitignore  .jcodemunch.jsonc  .mcp.json  CLAUDE.md  config.yaml  fused-memory-config.yaml  orchestrator-config.yaml  pyproject.toml
.github/workflows/: ci.yml
.task/: iterations.jsonl  plan.json
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
.worktrees/10/.task/: plan.json
autopilot/: __init__.py  cli.py  config.py  db.py  llm.py  orchestrator.py
autopilot/analyze/: asr.py  audio_events.py  captions.py  embeddings.py  faces.py  gpu_scheduler.py  objects.py  scenes.py
autopilot/ingest/: __init__.py  dedup.py  normalizer.py  scanner.py
autopilot/organize/: __init__.py  classify.py  cluster.py  narratives.py
autopilot/plan/: edl.py  otio_export.py  script.py  validator.py
autopilot/prompts/: activity_label.md  edit_planner.md  narrative_planner.md  script_writer.md
autopilot/render/: __init__.py  crop.py  ffmpeg_render.py  moviepy_render.py  router.py  validate.py
autopilot/source/: __init__.py  broll.py  fetch_list.py  music.py  resolve.py  voiceover.py
autopilot/upload/: __init__.py  thumbnail.py  youtube.py
autopilot/web/: __init__.py  app.py  deps.py
autopilot/web/routes/: __init__.py  dashboard.py  gates.py  media.py  pipeline.py  review.py  settings.py  sse.py
autopilot/web/static/: app.css  app.js
autopilot/web/templates/: base.html  dashboard.html
autopilot/web/templates/gates/: config.html
autopilot/web/templates/macros/: narrative_status_badge.html  status_badge.html
autopilot/web/templates/media/: detail.html  list.html
autopilot/web/templates/partials/: cluster_card.html  gate_toggle.html  media_row.html  narrative_card.html  narrative_edit_form.html  stage_card.html  tab_audio_events.html  tab_detections.html  tab_embeddings.html  tab_faces.html  tab_metadata.html  tab_transcript.html  timeline_bar.html
autopilot/web/templates/pipeline/: index.html  jobs.html  stages.html
autopilot/web/templates/review/: clusters.html  hub.html  narratives.html  render_index.html  renders.html  scripts.html  uploads.html
autopilot/web/templates/settings/: config.html
docs/: prd-autopilot-editor.md  prd-web-console.md
hooks/: project-checks
review/: briefing.yaml
scripts/: check_queue_health.py  label_faces.py  setup_youtube_oauth.py
tests/: conftest.py  test_asr.py  test_audio_events.py  test_broll.py  test_captions.py  test_check_queue_health.py  test_ci_workflow.py  test_classify.py  test_cli.py  test_cli_conventions.py  test_cluster.py  test_cluster_card.py  test_cluster_review.py  test_config.py  test_conftest_helpers.py  test_conftest_worktree.py  test_coverage_config.py  test_crop.py  test_dashboard.py  test_db.py  test_db_pipeline.py  test_db_update_rowcount.py  test_db_validate_helper.py  test_deps.py  test_e2e.py  test_edl.py  test_embeddings.py  test_faces.py  test_fetch_list.py  test_ffmpeg_render.py  test_gates.py  test_gpu_scheduler.py  test_ingest_dedup.py  test_ingest_normalizer.py  test_ingest_scanner.py  test_lazy_imports.py  test_llm.py  test_media_detail.py  test_media_list.py  test_moviepy_render.py  (+33 more)
tests/fixtures/: minimal_config.yaml  valid_config.yaml
