[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autopilot-video"
version = "0.1.0"
description = "Automated video editing pipeline — from raw footage to published video"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    # Core
    "click",
    "numpy",
    "Pillow",
    "pyyaml",
    "requests",
    # ML — speech & audio
    "whisperx>=0.10,<1.0",
    "faster-whisper>=1.0,<2.0",
    "panns-inference>=0.1,<1.0",
    # ML — vision
    "ultralytics>=8.0,<9.0",
    "insightface>=0.7,<1.0",
    "transformers>=4.40,<5.0",
    "qwen-vl-utils>=0.0.8,<1.0",
    "faiss-gpu>=1.7,<2.0",
    "scikit-learn>=1.4,<2.0",
    # ML — generation
    "audiocraft>=1.3,<2.0",
    "kokoro>=0.9,<1.0",
    # Video
    "moviepy>=2.0,<3.0",
    "pyav>=12.0,<14.0",
    "opentimelineio>=0.17,<1.0",
    "scenedetect>=0.6,<1.0",
    # APIs
    "anthropic",
    "google-api-python-client",
]

[project.scripts]
autopilot = "autopilot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
]
vllm = [
    "vllm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
