[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autopilot"]

[project]
name = "autopilot-video"
version = "0.1.0"
description = "Automated video editing pipeline — from raw footage to published video"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    # Core
    "click",
    "numpy",
    "Pillow",
    "pyyaml",
    "requests",
    # ML — speech & audio
    "whisperx>=3.2,<4.0",
    "faster-whisper>=1.1,<2.0",
    "panns-inference>=0.1,<1.0",
    # ML — vision
    "ultralytics>=8.0,<9.0",
    "insightface>=0.7,<1.0",
    "transformers>=4.40,<5.0",
    "qwen-vl-utils>=0.0.8,<1.0",
    "faiss-cpu>=1.7,<2.0",
    "scikit-learn>=1.4,<2.0",
    # ML — generation
    "audiocraft>=1.3,<2.0",
    "kokoro>=0.9,<1.0",
    # Video
    "moviepy>=2.0,<3.0",
    "av>=14.0,<18.0",
    "opentimelineio>=0.17,<1.0",
    "scenedetect>=0.6,<1.0",
    # APIs
    "google-api-python-client",
    # Web
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "python-multipart",
    "sse-starlette",
]

[project.scripts]
autopilot = "autopilot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright",
    "httpx",
]
api-fallback = [
    "anthropic",
]
vllm = [
    "vllm",
]

[tool.uv]
# Override audiocraft's strict torch/torchaudio/torchtext/torchvision/xformers
# pins (torch==2.1.0, torchtext==0.16.0, xformers==0.0.22.post7) to allow
# compatibility with whisperx (needs torch>=2.7) and Python 3.12 (torchtext
# 0.16 and torchvision 0.16 lack cp312 wheels; xformers 0.0.22 requires torch
# at build time without declaring it).
override-dependencies = [
    "torch>=2.1,<3.0",
    "torchaudio>=2.1,<3.0",
    "torchtext>=0.18,<1.0",
    "torchvision>=0.18,<1.0",
    "xformers>=0.0.28",
    "av>=14.0,<18.0",
    "pydantic>=2.0,<3.0",
    "gradio>=4.0,<6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["autopilot"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
